[package]
name = "na-egui"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
log = "0.4"
pollster = "0.2"

egui = "0.22"
egui-wgpu = { version = "0.22", features = [ "winit" ] }
egui-winit = { version = "0.22", default-features = false, features = [ "android-native-activity" ] }
anyhow = "1.0.79"
image = "0.24.7"

[target.'cfg(not(target_os = "android"))'.dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"]}
env_logger = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
reqwest = { version = "0.11", features = ["rustls-tls", "native-tls-vendored",  "json", "blocking"]}
android_logger = "0.13"

[features]
default = []
desktop = []

[lib]
name="na_egui"
crate_type=["cdylib"]

[[bin]]
path="src/lib.rs"
name="cpnews"
required-features = [ "desktop" ]
